--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest",
     "test:watch": "jest --watch"
   },
   "dependencies": {
-    "expo": "~53.0.7",
+    "expo": "^53.0.8",
+    "expo-linking": "~7.1.4",
     "expo-router": "~5.0.5",
     "expo-splash-screen": "~0.30.8",
     "expo-status-bar": "~2.2.3",
@@ -24,12 +25,12 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@types/react": "~19.0.10",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~9.2.0",
-    "react-native-dotenv": "^3.4.11",
-    "@types/react": "~19.0.10",
+    "jest": "~29.7.0",
     "jest-expo": "~53.0.4",
-    "jest": "~29.7.0"
+    "react-native-dotenv": "^3.4.11"
   },
   "private": true
 }
