--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "detox:build:ios:debug": "npx pod-install && detox build --configuration ios.sim.debug",
+    "detox:test:ios:debug": "detox test --configuration ios.sim.debug",
+    "detox:build:android:debug": "detox build --configuration android.emu.debug",
+    "detox:test:android:debug": "detox test --configuration android.emu.debug"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.1.2",
@@ -32,6 +36,7 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
+    "detox": "^20.37.0",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~9.2.0",
     "jest": "~29.7.0",
