--- a/package.json
+++ b/package.json
@@ -35,13 +35,16 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@testing-library/jest-native": "^5.4.3",
+    "@testing-library/react-native": "^13.3.3",
     "@types/react": "~19.0.10",
     "detox": "^20.37.0",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~9.2.0",
     "jest": "~29.7.0",
     "jest-expo": "~53.0.4",
-    "react-native-dotenv": "^3.4.11"
+    "react-native-dotenv": "^3.4.11",
+    "redux-mock-store": "^1.5.5"
   },
   "private": true
 }
